fixes fadeouts on firefox

--- a/less/style.less
+++ b/less/style.less
@@ -200,7 +200,7 @@ body {
 						padding: 30px 0;
 						background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, transparent),color-stop(1, white));
 						background-image: -webkit-linear-gradient(top, transparent, white);
-						background-image: -moz-linear-gradient(top, transparent, white);
+						background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0), white);
 						background-image: -ms-linear-gradient(top, transparent, white);
 						background-image: -o-linear-gradient(top, transparent, white);
 					}
